# zlagoda

./: .env.sample  LICENSE  README.md  docker-compose.yml
server/: README.md  main.py  pyproject.toml  typing.py
server/app/: decorators.py  ioc_container.py  main.py  views.py
server/app/cli/commands/: _base.py  assign_employee.py  clear_all_checks.py  create_permissions.py  createuser.py  deassign_employee.py  migrate.py  update_user_permissions.py
server/app/controllers/: category.py  check.py  customer_card.py  employee.py
server/app/controllers/auth/: exceptions.py  hasher.py  login.py  registration.py  token_generator.py
server/app/controllers/permissions/: __init__.py  group.py  permissions.py  user.py
server/app/controllers/roles/: _base.py  cashier.py  employee.py  manager.py
server/app/dal/repositories/: _base.py  auth.py  category.py  check.py  customer_card.py  employee.py  product.py  sale.py  store_product.py
server/app/dal/schemas/: __init__.py  _base.py  auth.py  category.py  check.py  customer_card.py  employee.py  product.py  sale.py  store_product.py
server/app/db/: __init__.py
server/app/migrations/: 001_init.reverse.sql  001_init.sql  002_user_groups_permissions.reverse.sql  002_user_groups_permissions.sql  003_user_add_employee.reverse.sql  003_user_add_employee.sql
server/app/settings/: __init__.py  _logging.py  base.py
server/app/views/: _base.py  auth.py  category.py  check.py  customer_card.py  employee.py  product.py  store_product.py
server/db/: __init__.py  _base.py  postgres.py
server/settings/: base.py
(+153 files in other folders)
