[tool.poetry]
name = "zlagoda-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
structlog = "^25.3.0"
overrides = "^7.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
ipython = "^9.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
